Desktop stuff is now separate from web

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,9 @@
         "react"
     ],
     "rules": {
+        "import/extensions": 0,
+        "import/no-extraneous-dependencies": 0,
+        "import/no-unresolved": [2, { "ignore": ["electron"] }],
         "indent": [
             "error",
             4
