--- a/desktop/package.json
+++ b/desktop/package.json
@@ -5,11 +5,9 @@
   "description": "My Electron application description",
   "main": "src/index.js",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "eslint src --color"
+    "dev": "electron-forge start",
+    "prod": "electron-forge make",
+    "test": "node_modules/mocha/bin/mocha ./src/**/*.test.js --compilers js:babel-core/register"
   },
   "keywords": [],
   "author": "timothysolum",
@@ -55,15 +53,21 @@
     "redux": "^3.7.2"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "electron-forge": "^4.1.4",
     "electron-prebuilt-compile": "1.7.9",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.5.1"
+    "eslint-plugin-react": "^7.5.1",
+    "mocha": "^4.0.1",
+    "sinon": "^4.1.2"
   }
 }
