--- a/package.json
+++ b/package.json
@@ -8,14 +8,22 @@
     "test": "test"
   },
   "scripts": {
-    "preinstall": "cd ./shared && npm install && cd ../desktop && npm install && cd ../native && npm install && cd ../web && npm install &&  cd ../dev-server && npm install",
-    "postinstall": "./create-shared-npm-link.sh",
+    "desktop:dev": "cd ./desktop && npm run dev",
+    "desktop:prod": "cd ./desktop && npm run prod",
+    "desktop:test": "cd ./desktop && npm run test",
+
+    "dev-server": "node ./dev-server/index.js",    
+
     "native:dev": "cd ./native && npm run dev",
     "native:test": "cd ./native && npm run test",
-    "dev-server": "node ./dev-server/index.js",
+
+    "preinstall": "cd ./shared && npm install && cd ../desktop && npm install && cd ../native && npm install && cd ../web && npm install &&  cd ../dev-server && npm install",
+    "postinstall": "./create-shared-npm-link.sh",
+
+    "shared:test": "cd ./shared && npm run test",
+    
     "web:dev": "cd ./web && npm run dev",
-    "web:test": "cd ./web && npm run test",
-    "shared:test": "cd ./shared && npm run test"
+    "web:test": "cd ./web && npm run test"
   },
   "repository": {
     "type": "git",
