--- a/web/package.json
+++ b/web/package.json
@@ -3,21 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
     "dev": "./node_modules/.bin/webpack -d --watch",
-    "shared-symlink": "../shared-symlink.sh",
     "test": "node_modules/mocha/bin/mocha ./src/**/*.test.js --compilers js:babel-core/register"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@bitbucket.org/iamdudeman/small-retail-js.git"
   },
   "author": "Tim Solum",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/iamdudeman/small-retail-js#readme",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -26,6 +17,7 @@
     "enzyme": "^3.1.1",
     "enzyme-adapter-react-16": "^1.0.4",
     "mocha": "^4.0.1",
+    "nodeblues": "^1.2.0",
     "react-test-renderer": "^16.1.0",
     "sinon": "^4.1.2",
     "webpack": "^3.8.1"
