--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,18 +20,10 @@
     "rules": {
         "import/extensions": 0,
         "import/no-extraneous-dependencies": 0,
-        "import/no-unresolved": [2, { "ignore": ["electron"] }],
-        "indent": [
-            "error",
-            4
-        ],
-        "quotes": [
-            "error",
-            "single"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ]
+        "indent": ["error", 2],
+        "linebreak-style": ["error", "unix"],
+        "no-trailing-spaces": "error",
+        "quotes": ["error", "single"],
+        "semi": ["error", "always"]
     }
 }
