Moved HMR stuff out of source files for web. Beginning of prod build for web

--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "./node_modules/.bin/webpack -d --watch",
+    "prod": "./node_modules/.bin/webpack -p --progress",
     "test": "node_modules/mocha/bin/mocha ./src/**/*.test.js --compilers js:babel-core/register"
   },
   "author": "Tim Solum",
