--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "desktop:prod": "cd ./desktop && npm run prod",
     "desktop:test": "cd ./desktop && npm run test",
 
-    "dev-server": "node ./dev-server/index.js",    
+    "dev-server": "node ./dev-server/index.js",
 
     "native:dev": "cd ./native && npm run dev",
     "native:test": "cd ./native && npm run test",
@@ -20,8 +20,9 @@
     "postinstall": "./create-shared-npm-link.sh",
 
     "shared:test": "cd ./shared && npm run test",
-    
+
     "web:dev": "cd ./web && npm run dev",
+    "web:prod": "cd ./web && npm run prod",
     "web:test": "cd ./web && npm run test"
   },
   "repository": {
