--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,8 @@
     "nodeblues": "^1.2.0",
     "react-test-renderer": "^16.1.0",
     "sinon": "^4.1.2",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "webpack-bundle-analyzer": "^2.9.1"
   },
   "dependencies": {
     "react": "^16.1.0",
