--- a/web/package.json
+++ b/web/package.json
@@ -11,9 +11,12 @@
   "author": "Tim Solum",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.34",
+    "@babel/preset-env": "^7.0.0-beta.34",
+    "@babel/preset-react": "^7.0.0-beta.34",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.1.1",
     "enzyme-adapter-react-16": "^1.0.4",
