--- a/desktop/package.json
+++ b/desktop/package.json
@@ -5,8 +5,8 @@
   "description": "My Electron application description",
   "main": "src/index.js",
   "scripts": {
-    "dev": "electron-forge start",
-    "prod": "electron-forge make",
+    "dev": "node node_modules/electron-forge/dist/forge.js start",
+    "prod": "node node_modules/electron-forge/dist/forge.js make",
     "test": "node_modules/mocha/bin/mocha ./src/**/*.test.js --compilers js:babel-core/register"
   },
   "keywords": [],
@@ -45,29 +45,29 @@
     }
   },
   "dependencies": {
-    "electron-compile": "^6.4.2",
-    "electron-squirrel-startup": "^1.0.0",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "electron-compile": "6.4.2",
+    "electron-squirrel-startup": "1.0.0",
+    "react": "16.2",
+    "react-dom": "16.2",
+    "react-redux": "5.0.6",
+    "redux": "3.7.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "electron-forge": "^4.1.4",
+    "babel-core": "6.26.0",
+    "babel-plugin-transform-async-to-generator": "6.24.1",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "electron-forge": "4.1.4",
     "electron-prebuilt-compile": "1.7.9",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.5.1",
-    "mocha": "^4.0.1",
-    "sinon": "^4.1.2"
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "1.1.0",
+    "eslint": "4.16.0",
+    "eslint-config-airbnb": "15.1.0",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.5.1",
+    "mocha": "4.0.1",
+    "sinon": "4.1.2"
   }
 }
