--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
   "license": "ISC",
   "homepage": "https://github.com/iamdudeman/react-cross-platform-boilerplate#readme",
   "devDependencies": {
-    "eslint": "^4.10.0",
-    "eslint-plugin-react": "^7.4.0"
+    "eslint": "4.16.0",
+    "eslint-plugin-react": "7.5.1"
   },
   "dependencies": {}
 }
