--- a/shared/package.json
+++ b/shared/package.json
@@ -10,14 +10,14 @@
   "author": "Tim Solum",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "mocha": "^4.0.1"
+    "babel-core": "6.26.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "mocha": "4.0.1"
   },
   "dependencies": {
-    "react": "^16.1.1",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "react": "16.2",
+    "react-redux": "5.0.6",
+    "redux": "3.7.2"
   }
 }
