--- a/web/package.json
+++ b/web/package.json
@@ -11,26 +11,27 @@
   "author": "Tim Solum",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.34",
-    "@babel/preset-env": "^7.0.0-beta.34",
-    "@babel/preset-react": "^7.0.0-beta.34",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "enzyme": "^3.1.1",
-    "enzyme-adapter-react-16": "^1.0.4",
-    "mocha": "^4.0.1",
-    "nodeblues": "^1.2.0",
-    "react-test-renderer": "^16.1.0",
-    "sinon": "^4.1.2",
-    "webpack": "^3.8.1",
-    "webpack-bundle-analyzer": "^2.9.1"
+    "@babel/core": "7.0.0-beta.34",
+    "@babel/preset-env": "7.0.0-beta.34",
+    "@babel/preset-react": "7.0.0-beta.34",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react": "6.24.1",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "1.1.0",
+    "html-webpack-plugin": "2.30.1",
+    "mocha": "4.0.1",
+    "nodeblues": "1.3.1",
+    "react-test-renderer": "16.2",
+    "sinon": "4.1.2",
+    "webpack": "3.8.1",
+    "webpack-bundle-analyzer": "2.9.1"
   },
   "dependencies": {
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "react": "16.2",
+    "react-dom": "16.2",
+    "react-redux": "5.0.6",
+    "redux": "3.7.2"
   }
 }
