--- a/desktop/package.json
+++ b/desktop/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "node node_modules/electron-forge/dist/forge.js start",
     "prod": "node node_modules/electron-forge/dist/forge.js make",
-    "test": "node_modules/mocha/bin/mocha ./src/**/*.test.js --compilers js:babel-core/register"
+    "test": "../node_modules/mocha/bin/mocha ./src/**/*.test.js --compilers js:babel-core/register"
   },
   "keywords": [],
   "author": "timothysolum",
@@ -66,8 +66,6 @@
     "eslint-config-airbnb": "15.1.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.5.1",
-    "mocha": "4.0.1",
-    "sinon": "4.1.2"
+    "eslint-plugin-react": "7.5.1"
   }
 }
