--- a/native/package.json
+++ b/native/package.json
@@ -23,8 +23,7 @@
     "exp": "^48.0.2",
     "jest-expo": "25.0.0",
     "react-native-scripts": "1.7.0",
-    "react-test-renderer": "16.2",
-    "sinon": "^4.1.2"
+    "react-test-renderer": "16.2"
   },
   "dependencies": {
     "expo": "25.0.0",
