--- a/shared/package.json
+++ b/shared/package.json
@@ -5,15 +5,14 @@
   "main": "index.js",
   "directories": {},
   "scripts": {
-    "test": "node_modules/mocha/bin/mocha ./src/**/*.test.js --compilers js:babel-core/register"
+    "test": "../node_modules/mocha/bin/mocha ./src/**/*.test.js --compilers js:babel-core/register"
   },
   "author": "Tim Solum",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "6.26.0",
     "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "mocha": "4.0.1"
+    "babel-preset-react": "6.24.1"
   },
   "dependencies": {
     "react": "16.2",
