--- a/desktop/package.json
+++ b/desktop/package.json
@@ -46,11 +46,7 @@
   },
   "dependencies": {
     "electron-compile": "6.4.2",
-    "electron-squirrel-startup": "1.0.0",
-    "react": "16.2",
-    "react-dom": "16.2",
-    "react-redux": "5.0.6",
-    "redux": "3.7.2"
+    "electron-squirrel-startup": "1.0.0"
   },
   "devDependencies": {
     "babel-core": "6.26.0",
@@ -59,13 +55,6 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "electron-forge": "4.2.0",
-    "electron-prebuilt-compile": "1.7.11",
-    "enzyme": "3.3.0",
-    "enzyme-adapter-react-16": "1.1.0",
-    "eslint": "4.16.0",
-    "eslint-config-airbnb": "15.1.0",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.5.1"
+    "electron-prebuilt-compile": "1.7.11"
   }
 }
