--- a/native/package.json
+++ b/native/package.json
@@ -18,19 +18,12 @@
     "preset": "jest-expo"
   },
   "devDependencies": {
-    "enzyme": "3.3.0",
-    "enzyme-adapter-react-16": "1.1.1",
-    "exp": "^48.0.2",
+    "exp": "48.0.2",
     "jest-expo": "25.0.0",
-    "react-native-scripts": "1.7.0",
-    "react-test-renderer": "16.2"
+    "react-native-scripts": "1.7.0"
   },
   "dependencies": {
     "expo": "25.0.0",
-    "react": "16.2",
-    "react-dom": "16.2",
-    "react-native": "0.52.1",
-    "react-redux": "5.0.6",
-    "redux": "3.7.2"
+    "react-native": "0.52.1"
   }
 }
