--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "dev-server": "node ./dev-server/index.js",
     "native:dev": "cd ./native && npm run dev",
     "native:test": "cd ./native && npm run test",
-    "preinstall": "cd ./shared && npm install && cd ../desktop && npm install && cd ../native && npm install && cd ../web && npm install &&  cd ../dev-server && npm install",
+    "preinstall": "cd ./shared && npm install && cd ../desktop && npm install && cd ../native && npm install &&  cd ../dev-server && npm install",
     "postinstall": "./create-shared-npm-link.sh",
     "shared:test": "cd ./shared && npm run test",
     "web:dev": "cd ./web && npm run dev",
     "web:prod": "rm -rf ./build/web && cd ./web && npm run prod",
-    "web:test": "cd ./web && npm run test"
+    "web:test": "cd ./web && npm run test",
+    "dev": "./node_modules/.bin/webpack -d --watch",
+    "prod": "./node_modules/.bin/webpack -p --progress",
+    "test": "./node_modules/mocha/bin/mocha ./web/src/**/*.test.js --compilers js:babel-core/register"
   },
   "repository": {
     "type": "git",
@@ -27,10 +30,29 @@
   "license": "ISC",
   "homepage": "https://github.com/iamdudeman/react-cross-platform-boilerplate#readme",
   "devDependencies": {
+    "@babel/core": "7.0.0-beta.34",
+    "@babel/preset-env": "7.0.0-beta.34",
+    "@babel/preset-react": "7.0.0-beta.34",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-react": "6.24.1",
+    "html-webpack-plugin": "2.30.1",
+    "nodeblues": "1.3.1",
+    "webpack": "3.8.1",
+    "webpack-bundle-analyzer": "2.9.1",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "1.1.1",
     "eslint": "4.16.0",
     "eslint-plugin-react": "7.5.1",
     "mocha": "4.0.1",
-    "sinon": "4.1.2"
+    "sinon": "4.1.2",
+    "react-test-renderer": "16.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react": "16.2",
+    "react-dom": "16.2",
+    "react-redux": "5.0.6",
+    "redux": "3.7.2"
+  }
 }
