--- a/shared/package.json
+++ b/shared/package.json
@@ -14,9 +14,5 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1"
   },
-  "dependencies": {
-    "react": "16.2",
-    "react-redux": "5.0.6",
-    "redux": "3.7.2"
-  }
+  "dependencies": {}
 }
