--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
   "name": "react-cross-platform-boilerplate",
+  "productName": "react-cross-platform-boilerplate",
   "version": "1.0.0",
   "description": "",
-  "main": "",
+  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "private": true,
   "directories": {},
   "scripts": {
-    "desktop:dev": "cd ./desktop && npm run dev",
-    "desktop:prod": "cd ./desktop && npm run prod",
-    "desktop:test": "cd ./desktop && npm run test",
     "dev-server": "node ./dev-server/index.js",
     "native:dev": "cd ./native && npm run dev",
     "native:test": "cd ./native && npm run test",
-    "preinstall": "cd ./shared && npm install && cd ../desktop && npm install && cd ../native && npm install &&  cd ../dev-server && npm install",
-    "postinstall": "./create-shared-npm-link.sh",
+    "preinstallaaaaa": "cd ./native && npm install",
+    "postinstallaaaaa": "./create-shared-npm-link.sh",
     "web:dev": "./node_modules/.bin/webpack -d --watch",
     "web:prod": "rm -rf ./build/web && ./node_modules/.bin/webpack -p --progress",
     "web:test": "./node_modules/mocha/bin/mocha ./web/src/**/*.test.js --compilers js:babel-core/register",
+    "shared:test": "./node_modules/mocha/bin/mocha ./shared/src/**/*.test.js --compilers js:babel-core/register",
+    "desktop:dev": "node node_modules/electron-forge/dist/forge.js start",
+    "desktop:prod": "node node_modules/electron-forge/dist/forge.js make",
+    "desktop:test": "./node_modules/mocha/bin/mocha ./desktop/src/**/*.test.js --compilers js:babel-core/register",
 
-    "shared:test": "./node_modules/mocha/bin/mocha ./shared/src/**/*.test.js --compilers js:babel-core/register"
+    "dev": "react-native-scripts start",
+    "prod:android": "node node_modules/exp/bin/exp.js build:android",
+    "prod:ios": "node node_modules/exp/bin/exp.js build:ios",
+    "test": "node node_modules/jest/bin/jest.js src",
+    "eject": "react-native-scripts eject",
+    "android": "react-native-scripts android",
+    "ios": "react-native-scripts ios"
 
   },
   "repository": {
@@ -46,12 +54,61 @@
     "eslint-plugin-react": "7.5.1",
     "mocha": "4.0.1",
     "sinon": "4.1.2",
-    "react-test-renderer": "16.2"
+    "react-test-renderer": "16.2",
+    "electron-compile": "6.4.2",
+    "electron-squirrel-startup": "1.0.0",
+    "babel-plugin-transform-async-to-generator": "6.24.1",
+    "babel-preset-es2015": "6.24.1",
+    "electron-forge": "4.2.0",
+    "electron-prebuilt-compile": "1.7.11",
+
+    "exp": "49.0.1",
+    "jest-expo": "25.0.0",
+    "react-native-scripts": "1.7.0"
+
   },
   "dependencies": {
     "react": "16.2",
     "react-dom": "16.2",
     "react-redux": "5.0.6",
-    "redux": "3.7.2"
+    "redux": "3.7.2",
+    "expo": "25.0.0",
+    "react-native": "0.52.1"
+
+  },
+  "jest": {
+    "preset": "jest-expo"
+  },
+  "config": {
+    "forge": {
+      "make_targets": {
+        "win32": [
+          "squirrel"
+        ],
+        "darwin": [
+          "zip"
+        ],
+        "linux": [
+          "deb",
+          "rpm"
+        ]
+      },
+      "electronPackagerConfig": {
+        "packageManager": "npm"
+      },
+      "electronWinstallerConfig": {
+        "name": "react-cross-platform-boilerplate"
+      },
+      "electronInstallerDebian": {},
+      "electronInstallerRedhat": {},
+      "github_repository": {
+        "owner": "",
+        "name": ""
+      },
+      "windowsStoreConfig": {
+        "packageName": "",
+        "name": "deskreact-cross-platform-boilerplatetop"
+      }
+    }
   }
 }
