native closer to working again

--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "expo": {
+    "entryPoint": "./native/App.js",
     "name": "ReactCrossPlatform",
     "slug": "ReactCrossPlatform",
     "version": "1.0.0",
