--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "scripts": {
     "dev-server": "node ./dev-server/index.js",
     "native:dev": "cd ./native && npm run dev",
-    "native:test": "cd ./native && npm run test",
     "preinstallaaaaa": "cd ./native && npm install",
     "postinstallaaaaa": "./create-shared-npm-link.sh",
     "web:dev": "./node_modules/.bin/webpack -d --watch",
@@ -19,15 +18,13 @@
     "desktop:dev": "node node_modules/electron-forge/dist/forge.js start",
     "desktop:prod": "node node_modules/electron-forge/dist/forge.js make",
     "desktop:test": "./node_modules/mocha/bin/mocha ./desktop/src/**/*.test.js --compilers js:babel-core/register",
-
     "dev": "react-native-scripts start",
     "prod:android": "node node_modules/exp/bin/exp.js build:android",
     "prod:ios": "node node_modules/exp/bin/exp.js build:ios",
-    "test": "node node_modules/jest/bin/jest.js src",
+    "native:test": "node node_modules/jest/bin/jest.js native/src",
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios"
-
   },
   "repository": {
     "type": "git",
@@ -61,20 +58,18 @@
     "babel-preset-es2015": "6.24.1",
     "electron-forge": "4.2.0",
     "electron-prebuilt-compile": "1.7.11",
-
     "exp": "49.0.1",
     "jest-expo": "25.0.0",
     "react-native-scripts": "1.7.0"
-
   },
   "dependencies": {
+    "expo": "25.0.0",
+    "prop-types": "^15.6.0",
     "react": "16.2",
     "react-dom": "16.2",
+    "react-native": "0.52.1",
     "react-redux": "5.0.6",
-    "redux": "3.7.2",
-    "expo": "25.0.0",
-    "react-native": "0.52.1"
-
+    "redux": "3.7.2"
   },
   "jest": {
     "preset": "jest-expo"
