--- a/package.json
+++ b/package.json
@@ -7,24 +7,20 @@
   "private": true,
   "directories": {},
   "scripts": {
-    "dev-server": "node ./dev-server/index.js",
-    "native:dev": "cd ./native && npm run dev",
-    "preinstallaaaaa": "cd ./native && npm install",
-    "postinstallaaaaa": "./create-shared-npm-link.sh",
-    "web:dev": "./node_modules/.bin/webpack -d --watch",
-    "web:prod": "rm -rf ./build/web && ./node_modules/.bin/webpack -p --progress",
-    "web:test": "./node_modules/mocha/bin/mocha ./web/src/**/*.test.js --compilers js:babel-core/register",
-    "shared:test": "./node_modules/mocha/bin/mocha ./shared/src/**/*.test.js --compilers js:babel-core/register",
     "desktop:dev": "node node_modules/electron-forge/dist/forge.js start",
     "desktop:prod": "node node_modules/electron-forge/dist/forge.js make",
     "desktop:test": "./node_modules/mocha/bin/mocha ./desktop/src/**/*.test.js --compilers js:babel-core/register",
-    "dev": "react-native-scripts start",
-    "prod:android": "node node_modules/exp/bin/exp.js build:android",
-    "prod:ios": "node node_modules/exp/bin/exp.js build:ios",
+    "dev-server": "node ./dev-server/index.js",
+    "shared:test": "./node_modules/mocha/bin/mocha ./shared/src/**/*.test.js --compilers js:babel-core/register",
+    "web:dev": "./node_modules/.bin/webpack -d --watch",
+    "web:prod": "rm -rf ./build/web && ./node_modules/.bin/webpack -p --progress",
+    "web:test": "./node_modules/mocha/bin/mocha ./web/src/**/*.test.js --compilers js:babel-core/register",
+    "native:dev": "react-native-scripts start",
+    "native:prod:android": "node node_modules/exp/bin/exp.js build:android",
+    "native:prod:ios": "node node_modules/exp/bin/exp.js build:ios",
     "native:test": "node node_modules/jest/bin/jest.js native/src",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios"
+    "native:android": "react-native-scripts android",
+    "native:ios": "react-native-scripts ios"
   },
   "repository": {
     "type": "git",
@@ -39,35 +35,36 @@
     "@babel/preset-react": "7.0.0-beta.34",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
+    "babel-plugin-transform-async-to-generator": "6.24.1",
     "babel-preset-env": "1.6.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-expo": "^4.0.0",
     "babel-preset-react": "6.24.1",
-    "html-webpack-plugin": "2.30.1",
-    "nodeblues": "1.3.1",
-    "webpack": "3.8.1",
-    "webpack-bundle-analyzer": "2.9.1",
+    "electron-compile": "6.4.2",
+    "electron-forge": "4.2.0",
+    "electron-prebuilt-compile": "1.7.11",
+    "electron-squirrel-startup": "1.0.0",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "eslint": "4.16.0",
     "eslint-plugin-react": "7.5.1",
-    "mocha": "4.0.1",
-    "sinon": "4.1.2",
-    "react-test-renderer": "16.2",
-    "electron-compile": "6.4.2",
-    "electron-squirrel-startup": "1.0.0",
-    "babel-plugin-transform-async-to-generator": "6.24.1",
-    "babel-preset-es2015": "6.24.1",
-    "electron-forge": "4.2.0",
-    "electron-prebuilt-compile": "1.7.11",
     "exp": "49.0.1",
+    "html-webpack-plugin": "2.30.1",
     "jest-expo": "25.0.0",
-    "react-native-scripts": "1.7.0"
+    "mocha": "4.0.1",
+    "nodeblues": "1.3.1",
+    "react-native-scripts": "1.11.1",
+    "react-test-renderer": "16.2.0",
+    "sinon": "4.1.2",
+    "webpack": "3.8.1",
+    "webpack-bundle-analyzer": "2.9.1"
   },
   "dependencies": {
     "expo": "25.0.0",
-    "prop-types": "^15.6.0",
-    "react": "16.2",
-    "react-dom": "16.2",
-    "react-native": "0.52.1",
+    "prop-types": "15.6.0",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "react-native": "0.52.0",
     "react-redux": "5.0.6",
     "redux": "3.7.2"
   },
@@ -102,7 +99,7 @@
       },
       "windowsStoreConfig": {
         "packageName": "",
-        "name": "deskreact-cross-platform-boilerplatetop"
+        "name": "react-cross-platform-boilerplate"
       }
     }
   }
