--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "babel-plugin-transform-async-to-generator": "6.24.1",
     "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
-    "babel-preset-expo": "^4.0.0",
+    "babel-preset-expo": "4.0.0",
     "babel-preset-react": "6.24.1",
     "electron-compile": "6.4.2",
     "electron-forge": "4.2.0",
