--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
   "private": true,
   "directories": {},
   "scripts": {
-    "all:test": "./node_modules/mocha/bin/mocha ./testConfig.js --compilers js:babel-core/register",
+    "all:test": "node node_modules/jest/bin/jest.js ./testConfig.js",
     "desktop:dev": "node node_modules/electron-forge/dist/forge.js start",
     "desktop:prod": "node node_modules/electron-forge/dist/forge.js make",
-    "desktop:test": "./node_modules/mocha/bin/mocha ./desktop/src/testConfig.js --compilers js:babel-core/register",
+    "desktop:test": "node node_modules/jest/bin/jest.js ./desktop/src/testConfig.js",
     "dev-server": "node ./dev-server/index.js",
     "native:dev": "react-native-scripts start",
     "native:prod:android": "node node_modules/exp/bin/exp.js build:android",
     "native:prod:ios": "node node_modules/exp/bin/exp.js build:ios",
     "native:test": "node node_modules/jest/bin/jest.js native/src/testConfig.js",
-    "native:android": "#react-native-scripts android",
-    "native:ios": "#react-native-scripts ios",
-    "shared:test": "./node_modules/mocha/bin/mocha ./shared/src/testConfig.js --compilers js:babel-core/register",
+    "native:android": "#react-native-scripts android # TODO investigate need for this?",
+    "native:ios": "#react-native-scripts ios # TODO investigate need for this?",
+    "shared:test": "node node_modules/jest/bin/jest.js ./shared/src/testConfig.js",
     "web:dev": "./node_modules/.bin/webpack -d --watch",
     "web:prod": "rm -rf ./build/web && ./node_modules/.bin/webpack -p --progress",
-    "web:test": "./node_modules/mocha/bin/mocha ./web/src/testConfig.js --compilers js:babel-core/register"
+    "web:test": "node node_modules/jest/bin/jest.js ./web/src/testConfig.js"
   },
   "repository": {
     "type": "git",
@@ -31,14 +31,10 @@
   "license": "ISC",
   "homepage": "https://github.com/iamdudeman/react-cross-platform-boilerplate#readme",
   "devDependencies": {
-    "@babel/core": "7.0.0-beta.34",
-    "@babel/preset-env": "7.0.0-beta.34",
-    "@babel/preset-react": "7.0.0-beta.34",
     "babel-core": "6.26.0",
     "babel-loader": "7.1.2",
     "babel-plugin-transform-async-to-generator": "6.24.1",
     "babel-preset-env": "1.6.1",
-    "babel-preset-es2015": "6.24.1",
     "babel-preset-expo": "4.0.0",
     "babel-preset-react": "6.24.1",
     "electron-compile": "6.4.2",
@@ -50,9 +46,9 @@
     "eslint": "4.16.0",
     "eslint-plugin-react": "7.5.1",
     "exp": "49.0.1",
+    "expo": "25.0.0",
     "html-webpack-plugin": "2.30.1",
     "jest-expo": "25.0.0",
-    "mocha": "4.0.1",
     "nodeblues": "1.3.1",
     "react-native-scripts": "1.11.1",
     "react-test-renderer": "16.2.0",
@@ -61,7 +57,6 @@
     "webpack-bundle-analyzer": "2.9.1"
   },
   "dependencies": {
-    "expo": "25.0.0",
     "prop-types": "15.6.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
