--- a/.editorconfig
+++ b/.editorconfig
@@ -13,6 +13,6 @@ trim_trailing_whitespace = true
 charset = utf-8
 
 # 2 space indentation
-[*.{js,html,json}]
+[*.{js,html,json,md}]
 indent_style = space
 indent_size = 2
