--- a/app.json
+++ b/app.json
@@ -8,6 +8,7 @@
     "android": {
       "package": "me.solhub.reactcrossplatform"
     },
-    "sdkVersion": "25.0.0"
+    "sdkVersion": "25.0.0",
+    "entryPoint": "./node_modules/react-native-scripts/build/bin/crna-entry.js"
   }
 }
