Some cleanup and initial doc work for shared folder

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "native:test": "node node_modules/jest/bin/jest.js native/src/testConfig.js",
     "native:android": "#react-native-scripts android # TODO investigate need for this?",
     "native:ios": "#react-native-scripts ios # TODO investigate need for this?",
+    "shared:docs": "node node_modules/documentation/bin/documentation.js build shared/src/** -f md -o jsdocs/shared/shared.md && node node_modules/documentation/bin/documentation.js build shared/src/** -f html -o jsdocs/shared",
+    "shared:docs:lint": "node node_modules/documentation/bin/documentation.js lint shared/src/**",
     "shared:test": "node node_modules/jest/bin/jest.js ./shared/src/testConfig.js --watchAll",
     "web:dev": "./node_modules/.bin/webpack -d --watch",
     "web:prod": "rm -rf ./build/web && ./node_modules/.bin/webpack -p --progress",
@@ -36,6 +38,7 @@
     "babel-preset-env": "1.6.1",
     "babel-preset-expo": "4.0.0",
     "babel-preset-react": "6.24.1",
+    "documentation": "^5.4.0",
     "electron-compile": "6.4.2",
     "electron-forge": "4.2.0",
     "electron-prebuilt-compile": "1.7.11",
