Added docs and commands for all platforms

--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
   "private": true,
   "directories": {},
   "scripts": {
+    "all:docs": "npm run desktop:docs && npm run native:docs && npm run shared:docs && npm run web:docs",
+    "all:docs:lint": "npm run desktop:docs:lint && npm run native:docs:lint && npm run shared:docs:lint && npm run web:docs:lint",
     "all:test": "node node_modules/jest/bin/jest.js ./testConfig.js --watchAll",
     "desktop:dev": "node node_modules/electron-forge/dist/forge.js start",
+    "desktop:docs": "node node_modules/documentation/bin/documentation.js build desktop/src/** -f md -o jsdocs/desktop/desktop.md && node node_modules/documentation/bin/documentation.js build desktop/src/** -f html -o jsdocs/desktop",
+    "desktop:docs:lint": "node node_modules/documentation/bin/documentation.js lint desktop/src/**",
     "desktop:prod": "node node_modules/electron-forge/dist/forge.js make",
     "desktop:test": "node node_modules/jest/bin/jest.js ./desktop/src/testConfig.js --watchAll",
     "dev-server": "node ./dev-server/index.js",
     "native:dev": "react-native-scripts start",
+    "native:docs": "node node_modules/documentation/bin/documentation.js build native/src/** -f md -o jsdocs/native/native.md && node node_modules/documentation/bin/documentation.js build native/src/** -f html -o jsdocs/native",
+    "native:docs:lint": "node node_modules/documentation/bin/documentation.js lint native/src/**",
     "native:prod:android": "node node_modules/exp/bin/exp.js build:android",
     "native:prod:ios": "node node_modules/exp/bin/exp.js build:ios",
     "native:test": "node node_modules/jest/bin/jest.js native/src/testConfig.js",
@@ -21,6 +27,8 @@
     "shared:docs:lint": "node node_modules/documentation/bin/documentation.js lint shared/src/**",
     "shared:test": "node node_modules/jest/bin/jest.js ./shared/src/testConfig.js --watchAll",
     "web:dev": "./node_modules/.bin/webpack -d --watch",
+    "web:docs": "node node_modules/documentation/bin/documentation.js build web/src/** -f md -o jsdocs/web/web.md && node node_modules/documentation/bin/documentation.js build web/src/** -f html -o jsdocs/web",
+    "web:docs:lint": "node node_modules/documentation/bin/documentation.js lint web/src/**",
     "web:prod": "rm -rf ./build/web && ./node_modules/.bin/webpack -p --progress",
     "web:test": "node node_modules/jest/bin/jest.js ./web/src/testConfig.js --watchAll"
   },
