--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "babel-preset-env": "1.6.1",
     "babel-preset-expo": "4.0.0",
     "babel-preset-react": "6.24.1",
-    "documentation": "^5.4.0",
+    "documentation": "5.4.0",
     "electron-compile": "6.4.2",
     "electron-forge": "4.2.0",
     "electron-prebuilt-compile": "1.7.11",
