Added scripts to lint each platform or all. Started improving rules a bit

--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
   "scripts": {
     "all:docs": "npm run desktop:docs && npm run native:docs && npm run shared:docs && npm run web:docs",
     "all:docs:lint": "npm run desktop:docs:lint && npm run native:docs:lint && npm run shared:docs:lint && npm run web:docs:lint",
+    "all:lint": "./node_modules/.bin/eslint **/*.js",
     "all:test": "node node_modules/jest/bin/jest.js ./testConfig.js --watchAll",
     "desktop:dev": "node node_modules/electron-forge/dist/forge.js start",
     "desktop:docs": "node node_modules/documentation/bin/documentation.js build desktop/src/** -f md -o jsdocs/desktop/desktop.md && node node_modules/documentation/bin/documentation.js build desktop/src/** -f html -o jsdocs/desktop",
     "desktop:docs:lint": "node node_modules/documentation/bin/documentation.js lint desktop/src/**",
     "desktop:prod": "node node_modules/electron-forge/dist/forge.js make",
+    "desktop:lint": "./node_modules/.bin/eslint desktop/**/*.js",
     "desktop:test": "node node_modules/jest/bin/jest.js ./desktop/src/testConfig.js --watchAll",
     "dev-server": "node ./dev-server/index.js",
     "native:dev": "react-native-scripts start",
     "native:docs": "node node_modules/documentation/bin/documentation.js build native/src/** -f md -o jsdocs/native/native.md && node node_modules/documentation/bin/documentation.js build native/src/** -f html -o jsdocs/native",
     "native:docs:lint": "node node_modules/documentation/bin/documentation.js lint native/src/**",
+    "native:lint": "./node_modules/.bin/eslint native/**/*.js",
     "native:prod:android": "node node_modules/exp/bin/exp.js build:android",
     "native:prod:ios": "node node_modules/exp/bin/exp.js build:ios",
     "native:test": "node node_modules/jest/bin/jest.js native/src/testConfig.js",
@@ -25,10 +28,12 @@
     "native:ios": "#react-native-scripts ios # TODO investigate need for this?",
     "shared:docs": "node node_modules/documentation/bin/documentation.js build shared/src/** -f md -o jsdocs/shared/shared.md && node node_modules/documentation/bin/documentation.js build shared/src/** -f html -o jsdocs/shared",
     "shared:docs:lint": "node node_modules/documentation/bin/documentation.js lint shared/src/**",
+    "shared:lint": "./node_modules/.bin/eslint shared/**/*.js",
     "shared:test": "node node_modules/jest/bin/jest.js ./shared/src/testConfig.js --watchAll",
     "web:dev": "./node_modules/.bin/webpack -d --watch",
     "web:docs": "node node_modules/documentation/bin/documentation.js build web/src/** -f md -o jsdocs/web/web.md && node node_modules/documentation/bin/documentation.js build web/src/** -f html -o jsdocs/web",
     "web:docs:lint": "node node_modules/documentation/bin/documentation.js lint web/src/**",
+    "web:lint": "./node_modules/.bin/eslint web/**/*.js",
     "web:prod": "rm -rf ./build/web && ./node_modules/.bin/webpack -p --progress",
     "web:test": "node node_modules/jest/bin/jest.js ./web/src/testConfig.js --watchAll"
   },
@@ -55,6 +60,7 @@
     "enzyme-adapter-react-16": "1.1.1",
     "eslint": "4.16.0",
     "eslint-plugin-react": "7.5.1",
+    "eslint-plugin-react-native": "^3.2.1",
     "exp": "49.0.1",
     "html-webpack-plugin": "2.30.1",
     "jest-expo": "25.0.0",
