--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "enzyme-adapter-react-16": "1.1.1",
     "eslint": "4.16.0",
     "eslint-plugin-react": "7.5.1",
-    "eslint-plugin-react-native": "^3.2.1",
+    "eslint-plugin-react-native": "3.2.1",
     "exp": "49.0.1",
     "html-webpack-plugin": "2.30.1",
     "jest-expo": "25.0.0",
