--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/plugin-proposal-class-properties": "7.0.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0",
     "@babel/plugin-proposal-optional-chaining": "7.0.0",
+    "@babel/plugin-transform-runtime": "7.0.0",
     "@babel/preset-env": "7.0.0",
     "@babel/preset-react": "7.0.0",
     "babel-eslint": "9.0.0",
@@ -34,6 +35,7 @@
     "webpack-cli": "3.1.0"
   },
   "dependencies": {
+    "@babel/runtime": "7.0.0",
     "prop-types": "15.6.2",
     "react": "16.4.2",
     "react-dom": "16.4.2"
