--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
   "scripts": {
     "build": "webpack --mode production",
     "lint": "eslint . --ext .js",
-
     "tempBuild": "node build-scripts/build.js web prod",
     "tempTest": "node build-scripts/test.js web",
     "tempLint": "node build-scripts/lint.js"
@@ -30,9 +29,11 @@
     "@babel/preset-react": "7.0.0",
     "babel-eslint": "9.0.0",
     "babel-loader": "8.0.0",
+    "css-loader": "1.0.0",
     "eslint": "5.5.0",
     "eslint-plugin-react": "7.11.1",
     "html-webpack-plugin": "3.2.0",
+    "style-loader": "0.23.0",
     "webpack": "4.17.1",
     "webpack-bundle-analyzer": "2.9.1",
     "webpack-cli": "3.1.0"
